# GitPulse

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_sample_repo.py  gitpulse.toml  release.sh  report.csv  report.html  sample_report.html  sample_stats.json  stats.json  verify.sh  verify_and_open.sh
.github/workflows/: release.yml
src/: collector.rs  config.rs  github.rs  html_template.rs  main.rs  model.rs  report.js  report_charts.js  report_globals.js  report_i18n.js  report_main.js  report_utils.js  visualizer.rs
