[package]
name = "gitpulse"
version = "0.13.102"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }


chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tera = "1.19"
csv = "1.3"
toml = "0.9.11"
indicatif = "0.18.3"
regex = "1.10"
ureq = { version = "2.9", features = ["json"] }


